Indentical Option In Switch Statement

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <script src="./app.js"></script>
-    <script src="./bmi.js"></script>
+    <!-- <script src="./bmi.js"></script> -->
+    <!-- <script src="./archiveApp.js"></script> -->
 
 </body>
 </html>
