Using gcd or lcm

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="./app.js"></script>
+    <script src="./math.js"></script>
     <!-- <script src="./bmi.js"></script> -->
     <!-- <script src="./archiveApp.js"></script> -->
 
