Excersise Digital Clock 01

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .dark{
+            background-color: black;
+            color: white;
+        }
+        #clock {
+            width: 200px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <script src="./app.js"></script>
     <script src="./math.js"></script>
+    <script src="./digitalclock.js"></script>
     <!-- <script src="./bmi.js"></script> -->
     <!-- <script src="./archiveApp.js"></script> -->
+<div id = "clock" class = "dark">
+    <div class = "display">
+        <h1 id = "time"></h1>
+        <small></small>
+
+
+    </div>
+</div>
 
 </body>
 </html>
